fix: update password certificates

--- a/MSA.ReverseProxy/appsettings.json
+++ b/MSA.ReverseProxy/appsettings.json
@@ -52,7 +52,7 @@
 		"Certificates": {
 			"Default": {
 				"Path": "../aspnet/https/localhost.pfx",
-				"Password": "1"
+				"Password": "MsaFundamental"
 			}
 		}
 	}
