--- a/MSA.ProductService/appsettings.json
+++ b/MSA.ProductService/appsettings.json
@@ -16,7 +16,7 @@
 		"Certificates": {
 			"Default": {
 				"Path": "../aspnet/https/localhost.pfx",
-				"Password": "1"
+				"Password": "MsaFundamental"
 			}
 		}
 	},
